# brainfuck-shell

./: .gitignore  Cargo.toml  README.md  snapcraft.yaml
crates/nu-brainfuck/: Cargo.toml
crates/nu-brainfuck/src/: lib.rs
crates/nu-cli/: Cargo.toml
crates/nu-cli/src/: brainfuck.rs  cli.rs
