[package]
authors = ["The Nu Project Contributors"]
description = "Brainfuck Module for the Nu Shell"
edition = "2018"
license = "MIT"
name = "nu-brainfuck"
version = "0.30.1"

[lib]
doctest = false

[dependencies]
nu-errors = { version = "0.30.1", path = "../nu-errors" }
nu-plugin = { path = "../nu-plugin", version = "0.30.1" }
nu-protocol = { version = "0.30.1", path = "../nu-protocol" }
nu-source = { version = "0.30.1", path = "../nu-source" }
nu-command = { version = "0.30.1", path = "../nu-command" }



bigdecimal = { version = "0.2.0", features = ["serde"] }
indexmap = { version = "1.6.1", features = ["serde-1"] }
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
regex = "1.4.6"

rustyline = "8.0.0"


[dev-dependencies]
nu-test-support = { path = "../nu-test-support", version = "0.30.1" }

